# openapi/prenatal/v1/quiz.yaml
@@ -139,7 +139,7 @@ info:
   version: 0.1.0
 openapi: 3.0.3
 paths:
-  /v1/Answer:
+  /v1/Answers:
     post:
       description: ""
       operationId: create_answer
@@ -174,7 +174,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/prenatal.Question'
           description: OK
-      summary: 新增question
+      summary: 新增question信息
   /v1/questions/{id}:
     delete:
       description: ""
@@ -205,16 +205,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/prenatal.Question'
           description: OK
-      summary: 获取question详情
+      summary: 获取question信息
     put:
       description: ""
       operationId: update_question
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/prenatal.Question'
-        required: true
+      parameters:
+      - in: path
+        name: id
+        schema:
+          title: mojo.core.String
+          type: string
+      - in: query
+        name: question
+        schema:
+          $ref: '#/components/schemas/prenatal.Question'
       responses:
         "200":
           content:
